# swagger.json
@@ -752,6 +752,40 @@
             }
         },
 
+        "/api/admin/fetch-class-participants/{classId}": {
+            "get": {
+                "description": "",
+                "tags": ["Sport class participation"],
+                "parameters": [
+                    {
+                        "name": "classId",
+                        "in": "path",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "authorization",
+                        "in": "header",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+
         "/api/apply-on-class": {
             "post": {
                 "description": "",
